[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluerose73_utils"
version = "0.0.1"
authors = [
  { name="bluerose73", email="mashengjie73@gmail.com" },
]
description = "Bluerose73's Python utility package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bluerose73/bluerose73_utilst"
"Bug Tracker" = "https://github.com/bluerose73/bluerose73_utils/issues"